--- a/MyBlog-fontend/src/app/app.component.css
+++ b/MyBlog-fontend/src/app/app.component.css
@@ -28,3 +28,13 @@ button {
   width: 100%;
   margin-bottom: 10px;
 }
+
+#new-post-category-controls {
+  display: flex;
+}
+
+#post-container-controls {
+  display: flex;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
