--- a/MyBlog-fontend/src/app/app.component.css
+++ b/MyBlog-fontend/src/app/app.component.css
@@ -1,6 +1,3 @@
-button {
-  margin-right: 5px;
-}
 
 #main {
   background-color: #eeeeee;
@@ -11,17 +8,8 @@ button {
   margin-top: 20px;
 }
 
-.customJumbo {
-  background-color: rgb(223, 223, 223);
-  padding: 10px;
-}
-
-.blog_post_header {
-  background-color: #bbb;
-}
-
-.day_style {
-  background-color: #ccc;
+button {
+  margin-right: 5px;
 }
 
 .post_edit_textarea {
@@ -29,12 +17,25 @@ button {
   margin-bottom: 10px;
 }
 
-#new-post-category-controls {
+.new-post-category-controls {
   display: flex;
+  align-items: center;
+}
+
+.new-post-category-header {
+  margin-right: 8px;
+}
+
+.dropdown {
+  margin-bottom: 8px;
 }
 
 #post-container-controls {
   display: flex;
   margin-bottom: 10px;
-  margin-right: 10px;
+  height: 40px;
+}
+
+#search_field {
+  flex-basis: 400px
 }
