--- a/MyBlog-fontend/src/app/app.component.html
+++ b/MyBlog-fontend/src/app/app.component.html
@@ -62,7 +62,7 @@
   <hr>
 
   <!-- Make sure there is content loaded before rendering anything. -->
-  <span *ngIf="allYears[0] != undefined">
+  <span *ngIf="postDataArray != undefined">
 
     <h2>Post History</h2>
 
@@ -78,7 +78,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <span *ngFor="let item of [5,10,25,100]">
             <a class="dropdown-item"
-              (click)="filterSettings.resultLimit = item; filterSettings.page_index = 0; updateResultsArr();">{{item}}</a>
+              (click)="filterSettings.resultLimit = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
           </span>
         </div>
       </div>
@@ -91,16 +91,15 @@
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <span *ngFor="let item of getFilterList()">
-            <a class="dropdown-item" (click)="filterSettings.category = item">{{item}}</a>
+            <a class="dropdown-item" (click)="filterSettings.category = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
           </span>
         </div>
       </div>
 
-
       <!-- Pagination Component -->
       <nav id="pagination-nav" aria-label="Page navigation example" style="margin-right: 10px;">
         <ul class="pagination">
-          <div *ngFor="let item of getPaginationIndexes()">
+          <div *ngFor="let item of paginationArray">
             <li class="page-item">
               <a class="page-link" (click)="filterSettings.page_index = item">{{item+1}}</a>
             </li>
