--- a/MyBlog-fontend/src/app/app.component.html
+++ b/MyBlog-fontend/src/app/app.component.html
@@ -1,236 +1,235 @@
 <div id="main">
 
   <h1>
-    The Tech Noob's Note Keeping App
+    The Tech Noob's Note Keeping App <span *ngIf="userLoggedIn === true"><button type="submit" class="btn btn-success"
+      (click)="doPostOnLogout()">Logout</button></span>
   </h1>
 
   <hr>
 
-  <!-- Registration -->
-  <form (ngSubmit)="doPostOnRegister()" #postForm="ngForm">
-    <h3>Register</h3>
-    <div>
-      <label>Username:</label>
-      <input type="text" name="username" [(ngModel)]="registerForm.username" />
-    </div>
+  <div id="logged_out_content" *ngIf="userLoggedIn === false">
 
-    <div>
-      <label>Password:</label>
-      <input type="password" name="password" [(ngModel)]="registerForm.password" />
-    </div>
-
-    <!-- Submit button. -->
-    <div>
-      <button type="submit" class="btn btn-success">Submit</button>
-    </div>
-  </form>
-
-  <hr>
-
-  <!-- Login -->
-  <form (ngSubmit)="doPostOnLogin()" #postForm="ngForm">
-    <h3>Login</h3>
-    <div>
-      <label>Username:</label>
-      <input type="text" name="username" [(ngModel)]="loginForm.username" />
-    </div>
-
-    <div>
-      <label>Password:</label>
-      <input type="password" name="password" [(ngModel)]="loginForm.password" />
-    </div>
-
-    <!-- Submit button. -->
-    <div>
-      <button type="submit" class="btn btn-success">Submit</button>
-    </div>
-  </form>
-
-  <hr>
-
-  <!-- Logout button -->
-  <div>
-    <button type="submit" class="btn btn-success" (click)="doPostOnLogout()">Logout</button>
-  </div>
-
-  <hr>
-
-  <!-- Section for creating a new blog post. -->
-  <div id="create_post">
-
-    <!-- Category Selection // TODO => Make a drop-down component... -->
-    <div class="new-post-category-controls">
-      <h2 style="margin-right: 8px;">Create New Post in</h2>
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          {{formCategory}}
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <span *ngFor="let item of G_CATEGORY_ARRAY">
-            <a class="dropdown-item" (click)="formCategory = item">{{item}}</a>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <form (ngSubmit)="doPostOnSubmit()" #postForm="ngForm">
+    <!-- Registration -->
+    <form (ngSubmit)="doPostOnRegister()" #postForm="ngForm">
+      <h3>Registration (Currently Disabled)</h3>
       <div>
-        <!-- Text area for new post -->
-        <textarea class="post_edit_textarea" name="content" [(ngModel)]="formContent" placeholder="Enter Content Here:"
-          required></textarea><br />
+        <label>Username:</label>
+        <input type="text" name="username" [(ngModel)]="registerForm.username" />
+      </div>
 
-        <!-- Submit button. -->
-        <button type="submit" class="btn btn-success" [disabled]="!postForm.form.valid">Submit</button>
+      <div>
+        <label>Password:</label>
+        <input type="password" name="password" [(ngModel)]="registerForm.password" />
+      </div>
+
+      <!-- Submit button. -->
+      <div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+
+    <hr>
+
+    <!-- Login -->
+    <form (ngSubmit)="doPostOnLogin()" #postForm="ngForm">
+      <h3>Login</h3>
+      <div>
+        <label>Username:</label>
+        <input type="text" name="username" [(ngModel)]="loginForm.username" />
+      </div>
+
+      <div>
+        <label>Password:</label>
+        <input type="password" name="password" [(ngModel)]="loginForm.password" />
+      </div>
+
+      <!-- Submit button. -->
+      <div>
+        <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
 
   </div>
-  <hr>
 
-  <!-- Filter options section. -->
-  <div id="refresh_posts">
-    <h2>Refresh Posts</h2>
-    <h5>Get Posts Between Dates (MM/DD/YYYY):
-      <input type="text" [(ngModel)]="filterSettings.date_start_str">
-      <input type="text" [(ngModel)]="filterSettings.date_end_str">
-    </h5>
-    <button class="btn btn-primary" (click)="setPageIndexZero(); doGetPostData();">Update</button>
-    <br />
-  </div>
+  <div id="logged_in_content" *ngIf="userLoggedIn === true">
+    <!-- Section for creating a new blog post. -->
+    <div id="create_post">
 
-  <hr>
-
-  <!-- Mass operations section. -->
-  <div id="mass_operations">
-    <h2>Mass Operations</h2>
-    <button class="btn btn-primary" (click)="setAllPostsView()">View</button>
-    <button class="btn btn-primary" (click)="setAllPostsEdit()">Edit</button>
-  </div>
-
-  <hr>
-
-  <!-- Make sure there is content loaded before rendering anything. -->
-  <span *ngIf="postDataArray != undefined">
-
-    <h2>Post History</h2>
-
-    <!-- Container for post-container display controls. -->
-    <div id="post-container-controls">
-
-      <!-- Page Results Filter Drop-down -->
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Page Results
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <span *ngFor="let item of [5,10,25,100]">
-            <a class="dropdown-item"
-              (click)="filterSettings.resultLimit = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
-          </span>
-        </div>
-      </div>
-
-      <!-- Category Filter -->
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          {{filterSettings.category}}
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <span *ngFor="let item of getFilterList()">
-            <a class="dropdown-item"
-              (click)="filterSettings.category = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
-          </span>
-        </div>
-      </div>
-
-      <!-- Pagination Component -->
-      <nav id="pagination-nav" aria-label="Page navigation example" style="margin-right: 10px;">
-        <ul class="pagination">
-          <div *ngFor="let item of paginationArray">
-            <li class="page-item">
-              <a class="page-link" (click)="filterSettings.page_index = item">{{item+1}}</a>
-            </li>
+      <!-- Category Selection // TODO => Make a drop-down component... -->
+      <div class="new-post-category-controls">
+        <h2 style="margin-right: 8px;">Create New Post in</h2>
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            {{formCategory}}
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <span *ngFor="let item of G_CATEGORY_ARRAY">
+              <a class="dropdown-item" (click)="formCategory = item">{{item}}</a>
+            </span>
           </div>
-        </ul>
-      </nav>
+        </div>
+      </div>
 
-      <!-- Search Field -->
-      <input id="search_field" type="text" [(ngModel)]="filterSettings.searchField" placeholder="Search Here"
-        (ngModelChange)="textChange()">
+      <form (ngSubmit)="doPostOnSubmit()" #postForm="ngForm">
+        <div>
+          <!-- Text area for new post -->
+          <textarea class="post_edit_textarea" name="content" [(ngModel)]="formContent"
+            placeholder="Enter Content Here:" required></textarea><br />
+
+          <!-- Submit button. -->
+          <button type="submit" class="btn btn-success" [disabled]="!postForm.form.valid">Submit</button>
+        </div>
+      </form>
 
     </div>
+    <hr>
 
-    <div *ngFor="let result of resultsArr[filterSettings.page_index]">
-      <!-- Wrap each post into a card. -->
-      <div class="card" style="margin-bottom: 5px;">
-        <div class="card-body">
+    <!-- Filter options section. -->
+    <div id="refresh_posts">
+      <h2>Refresh Posts</h2>
+      <h5>Get Posts Between Dates (MM/DD/YYYY):
+        <input type="text" [(ngModel)]="filterSettings.date_start_str">
+        <input type="text" [(ngModel)]="filterSettings.date_end_str">
+      </h5>
+      <button class="btn btn-primary" (click)="setPageIndexZero(); doGetPostData();">Update</button>
+      <br />
+    </div>
 
-          <!-- View Mode -->
-          <span *ngIf="result.postData['displayMode'] == 'view'" (click)='result.postData["displayMode"] = "edit"'>
-            <h5 class="card-title">{{ getFormattedTime(result.postData['date']) }} in
-              {{ getFormattedCategory(result.postData['category']) }} on {{result.header}}</h5>
-            <p class="card-text">{{result.postData['content']}}</p>
-          </span>
+    <hr>
 
-          <!-- Edit Mode -->
-          <span *ngIf="result.postData['displayMode'] == 'edit'">
+    <!-- Mass operations section. -->
+    <div id="mass_operations">
+      <h2>Mass Operations</h2>
+      <button class="btn btn-primary" (click)="setAllPostsView()">View</button>
+      <button class="btn btn-primary" (click)="setAllPostsEdit()">Edit</button>
+    </div>
 
-            <!-- Card Header -->
-            <h5 class="card-title">{{ getFormattedTime(result.postData['date']) }} in
-              {{ getFormattedCategory(result.postData['category']) }}</h5>
+    <hr>
 
-            <!-- Update Date -->
-            <h5>New Date (MM/DD/YYYY/HH/MM/SS):
-              <input type="text" [(ngModel)]="result.postData['date_str']">
-            </h5>
+    <!-- Make sure there is content loaded before rendering anything. -->
+    <span *ngIf="postDataArray != undefined">
 
-            <!-- Update content -->
-            <h5>New Content:</h5>
-            <textarea class="post_edit_textarea" value="{{result.postData['content']}}" rows="3"
-              [(ngModel)]="result.postData['content']"></textarea><br />
+      <h2>Post History</h2>
 
-            <!-- Category Dropdown -->
-            <div class="new-post-category-controls">
-              <h5 class="new-post-category-header">New Category:</h5>
-              <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{result.postData['category']}}
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <span *ngFor="let item of G_CATEGORY_ARRAY">
-                    <a class="dropdown-item" (click)="result.postData['category'] = item">{{item}}</a>
-                  </span>
+      <!-- Container for post-container display controls. -->
+      <div id="post-container-controls">
+
+        <!-- Page Results Filter Drop-down -->
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Page Results
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <span *ngFor="let item of [5,10,25,100]">
+              <a class="dropdown-item"
+                (click)="filterSettings.resultLimit = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
+            </span>
+          </div>
+        </div>
+
+        <!-- Category Filter -->
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            {{filterSettings.category}}
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <span *ngFor="let item of getFilterList()">
+              <a class="dropdown-item"
+                (click)="filterSettings.category = item; setPageIndexZero(); updateResultsArray();">{{item}}</a>
+            </span>
+          </div>
+        </div>
+
+        <!-- Pagination Component -->
+        <nav id="pagination-nav" aria-label="Page navigation example" style="margin-right: 10px;">
+          <ul class="pagination">
+            <div *ngFor="let item of paginationArray">
+              <li class="page-item">
+                <a class="page-link" (click)="filterSettings.page_index = item">{{item+1}}</a>
+              </li>
+            </div>
+          </ul>
+        </nav>
+
+        <!-- Search Field -->
+        <input id="search_field" type="text" [(ngModel)]="filterSettings.searchField" placeholder="Search Here"
+          (ngModelChange)="textChange()">
+
+      </div>
+
+      <div *ngFor="let result of resultsArr[filterSettings.page_index]">
+        <!-- Wrap each post into a card. -->
+        <div class="card" style="margin-bottom: 5px;">
+          <div class="card-body">
+
+            <!-- View Mode -->
+            <span *ngIf="result.postData['displayMode'] == 'view'" (click)='result.postData["displayMode"] = "edit"'>
+              <h5 class="card-title">{{ getFormattedTime(result.postData['date']) }} in
+                {{ getFormattedCategory(result.postData['category']) }} on {{result.header}}</h5>
+              <p class="card-text">{{result.postData['content']}}</p>
+            </span>
+
+            <!-- Edit Mode -->
+            <span *ngIf="result.postData['displayMode'] == 'edit'">
+
+              <!-- Card Header -->
+              <h5 class="card-title">{{ getFormattedTime(result.postData['date']) }} in
+                {{ getFormattedCategory(result.postData['category']) }}</h5>
+
+              <!-- Update Date -->
+              <h5>New Date (MM/DD/YYYY/HH/MM/SS):
+                <input type="text" [(ngModel)]="result.postData['date_str']">
+              </h5>
+
+              <!-- Update content -->
+              <h5>New Content:</h5>
+              <textarea class="post_edit_textarea" value="{{result.postData['content']}}" rows="3"
+                [(ngModel)]="result.postData['content']"></textarea><br />
+
+              <!-- Category Dropdown -->
+              <div class="new-post-category-controls">
+                <h5 class="new-post-category-header">New Category:</h5>
+                <div class="dropdown">
+                  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{result.postData['category']}}
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <span *ngFor="let item of G_CATEGORY_ARRAY">
+                      <a class="dropdown-item" (click)="result.postData['category'] = item">{{item}}</a>
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <!-- 3 Button Group (Save/Cancel/Delete) -->
-            <button type="submit" class="btn btn-primary" (click)='performSave(result.postData)'>Save</button>
-            <button type="submit" class="btn btn-warning"
-              (click)='result.postData["displayMode"] = "view"'>Cancel</button>
-            <button type="submit" class="btn btn-danger"
-              (click)='doDeleteRemovePost(result.postData["_id"])'>Delete</button>
+              <!-- 3 Button Group (Save/Cancel/Delete) -->
+              <button type="submit" class="btn btn-primary" (click)='performSave(result.postData)'>Save</button>
+              <button type="submit" class="btn btn-warning"
+                (click)='result.postData["displayMode"] = "view"'>Cancel</button>
+              <button type="submit" class="btn btn-danger"
+                (click)='doDeleteRemovePost(result.postData["_id"])'>Delete</button>
 
-          </span>
+            </span>
+          </div>
         </div>
       </div>
+
+    </span>
+    <hr>
+
+    <!-- About Me Section -->
+    <div id="user_guide">
+      <h2>User Guide</h2>
+      <p>
+        Work-In Progress:
+        To edit a single post, click it to enter exit mode, make your changes and then hit the save button.
+      </p>
     </div>
-
-  </span>
-  <hr>
-
-  <!-- About Me Section -->
-  <div id="user_guide">
-    <h2>User Guide</h2>
-    <p>
-      Work-In Progress:
-      To edit a single post, click it to enter exit mode, make your changes and then hit the save button.
-    </p>
   </div>
+
   <hr>
 
   <!-- About Me Section -->
