--- a/MyBlog-fontend/src/app/app.component.html
+++ b/MyBlog-fontend/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <h1>
     The Tech Noob's Note Keeping App <span *ngIf="userLoggedIn === true"><button type="submit" class="btn btn-success"
-      (click)="doPostOnLogout()">Logout</button></span>
+        (click)="doPostOnLogout()">Logout</button></span>
   </h1>
 
   <hr>
@@ -10,44 +10,46 @@
   <div id="logged_out_content" *ngIf="userLoggedIn === false">
 
     <!-- Registration -->
-    <form (ngSubmit)="doPostOnRegister()" #postForm="ngForm">
-      <h3>Registration</h3>
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username" [(ngModel)]="registerForm.username" />
-      </div>
+    <div class="card shadow p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
+      <div class="card-body">
+        <form (ngSubmit)="doPostOnRegister()" #postForm="ngForm">
+          <h3>Register</h3>
+          <div>
+            <label class="accountLabel">Username</label><br />
+            <input type="text" name="username" [(ngModel)]="registerForm.username" />
+          </div>
 
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password" [(ngModel)]="registerForm.password" />
-      </div>
+          <div>
+            <label class="accountLabel">Password</label><br />
+            <input type="password" name="password" [(ngModel)]="registerForm.password" />
+          </div><br />
 
-      <!-- Submit button. -->
-      <div>
-        <button type="submit" class="btn btn-success">Submit</button>
+          <!-- Submit button. -->
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
       </div>
-    </form>
-
-    <hr>
+    </div>
 
     <!-- Login -->
-    <form (ngSubmit)="doPostOnLogin()" #postForm="ngForm">
-      <h3>Login</h3>
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username" [(ngModel)]="loginForm.username" />
-      </div>
+    <div class="card shadow p-3 mb-5 bg-white rounded">
+      <div class="card-body">
+        <form (ngSubmit)="doPostOnLogin()" #postForm="ngForm">
+          <h3>Sign In</h3>
+          <div>
+            <label class="accountLabel">Username</label><br />
+            <input type="text" name="username" [(ngModel)]="loginForm.username" />
+          </div>
 
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password" [(ngModel)]="loginForm.password" />
-      </div>
+          <div>
+            <label class="accountLabel">Password</label><br />
+            <input type="password" name="password" [(ngModel)]="loginForm.password" />
+          </div><br />
 
-      <!-- Submit button. -->
-      <div>
-        <button type="submit" class="btn btn-success">Submit</button>
+          <!-- Submit button. -->
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
       </div>
-    </form>
+    </div>
 
   </div>
 
@@ -137,8 +139,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <span *ngFor="let item of getFilterList()">
-              <a class="dropdown-item"
-                (click)="updateFilterCategory(item)">{{item}}</a>
+              <a class="dropdown-item" (click)="updateFilterCategory(item)">{{item}}</a>
             </span>
           </div>
         </div>
